--- a/index.html
+++ b/index.html
@@ -20,163 +20,75 @@
       --shadow: 0 20px 40px rgba(0,0,0,0.06);
       --radius: 24px;
       --transition: all 0.32s cubic-bezier(0.16,1,0.3,1);
+      --highlight-card: #0d5c63; /* Deep teal for first card */
     }
     *,*::before,*::after{box-sizing:border-box}
-    body{
-      margin:0;font-family:"Inter",system-ui,sans-serif;
-      background:var(--bg);color:var(--text);
-      line-height:1.6;-webkit-font-smoothing:antialiased;
-    }
-    .container{
-      max-width:1280px;margin:0 auto;padding:0 20px;
-    }
-    header{
-      padding:24px 0;text-align:center;
-    }
-    .logo{
-      height:68px;filter:drop-shadow(0 4px 12px rgba(0,0,0,0.1));
-      transition:var(--transition);
-    }
-    .logo:hover{transform:scale(1.05);}
-    
-    /* HERO */
-    .hero{
-      padding:100px 0 140px;text-align:center;
-      background:linear-gradient(to bottom, #f0f9ff 0%, #e0f2fe 100%);
-    }
-    .badge{
-      display:inline-block;background:var(--accent);color:white;
-      padding:8px 20px;border-radius:999px;font-size:0.95rem;font-weight:600;
-      margin-bottom:20px;letter-spacing:0.5px;
-    }
-    h1{
-      font-size:clamp(2.8rem,8vw,4.8rem);font-weight:900;
-      line-height:1.05;margin:0 0 24px 0;
-      background:linear-gradient(135deg,#1e293b,#0d5c63);
-      -webkit-background-clip:text;background-clip:text;
-      -webkit-text-fill-color:transparent;
-    }
-    .lead{
-      font-size:clamp(1.15rem,4vw,1.4rem);max-width:760px;margin:0 auto 32px;
-      color:var(--text-muted);line-height:1.7;
-    }
-    .motto{
-      font-size:clamp(1.8rem,6vw,3.2rem);font-weight:900;
-      background:linear-gradient(90deg,#ca8a04,#facc15);
-      -webkit-background-clip:text;background-clip:text;
-      -webkit-text-fill-color:transparent;
-      margin:40px 0 48px;display:block;
-    }
-    .cta-group{
-      display:flex;gap:16px;flex-wrap:wrap;justify-content:center;
-    }
-    .btn{
-      padding:18px 36px;border-radius:999px;font-weight:700;
-      font-size:1.1rem;text-decoration:none;display:inline-flex;
-      align-items:center;gap:12px;transition:var(--transition);
-      box-shadow:0 12px 32px rgba(0,0,0,0.1);
-    }
-    .btn-primary{
-      background:var(--gold-light);color:#1e293b;
-    }
-    .btn-primary:hover{
-      transform:translateY(-6px);box-shadow:0 20px 50px rgba(202,138,4,0.3);
-    }
-    .btn-secondary{
-      background:var(--accent);color:white;
-    }
-    .btn-secondary:hover{
-      transform:translateY(-6px);box-shadow:0 20px 50px rgba(13,92,99,0.4);
-    }
+    body{margin:0;font-family:"Inter",system-ui,sans-serif;background:var(--bg);color:var(--text);line-height:1.6;-webkit-font-smoothing:antialiased;}
+    .container{max-width:1280px;margin:0 auto;padding:0 20px;}
+    header{padding:32px 0;text-align:center;}
+    .logo{height:72px;filter:drop-shadow(0 4px 12px rgba(0,0,0,0.12));transition:var(--transition);}
+    .logo:hover{transform:scale(1.06);}
 
-    /* Stats */
-    .stats{
-      display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-      gap:32px;margin:120px auto;max-width:960px;
-    }
-    .stat{
-      background:white;padding:40px 32px;border-radius:24px;
-      box-shadow:0 20px 50px rgba(0,0,0,0.08);text-align:center;
-      transition:var(--transition);
-    }
+    .hero{padding:120px 0 160px;text-align:center;background:linear-gradient(to bottom,#f0f9ff 0%,#e0f2fe 100%);}
+    .badge{display:inline-block;background:var(--accent);color:white;padding:10px 24px;border-radius:999px;font-size:1rem;font-weight:600;margin-bottom:24px;letter-spacing:0.6px;}
+    h1{font-size:clamp(3rem,9vw,5.2rem);font-weight:900;line-height:1.05;margin:0 0 28px;background:linear-gradient(135deg,#1e293b,#0d5c63);-webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent;}
+    .lead{font-size:clamp(1.2rem,4.5vw,1.5rem);max-width:780px;margin:0 auto 36px;color:var(--text-muted);line-height:1.7;}
+    .motto{font-size:clamp(2rem,7.5vw,3.8rem);font-weight:900;background:linear-gradient(90deg,#ca8a04,#facc15);-webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent;margin:44px 0 56px;display:block;}
+    .cta-group{display:flex;gap:18px;flex-wrap:wrap;justify-content:center;}
+    .btn{padding:20px 40px;border-radius:999px;font-weight:700;font-size:1.18rem;text-decoration:none;display:inline-flex;align-items:center;gap:12px;transition:var(--transition);box-shadow:0 12px 32px rgba(0,0,0,0.1);}
+    .btn-primary{background:var(--gold-light);color:#1e293b;}
+    .btn-primary:hover{transform:translateY(-6px);box-shadow:0 24px 60px rgba(202,138,4,0.35);}
+    .btn-secondary{background:var(--accent);color:white;}
+    .btn-secondary:hover{transform:translateY(-6px);box-shadow:0 24px 60px rgba(13,92,99,0.4);}
+
+    .stats{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:36px;margin:140px auto;max-width:960px;}
+    .stat{background:white;padding:48px 36px;border-radius:28px;box-shadow:0 25px 60px rgba(0,0,0,0.09);text-align:center;transition:var(--transition);}
     .stat:hover{transform:translateY(-12px);}
-    .stat-value{
-      font-size:3.2rem;font-weight:900;color:var(--accent);
-      line-height:1;margin-bottom:8px;
-    }
-    .stat-label{
-      font-size:1.1rem;color:var(--text-muted);font-weight:500;
-    }
+    .stat-value{font-size:3.6rem;font-weight:900;color:var(--accent);line-height:1;margin-bottom:8px;}
+    .stat-label{font-size:1.1rem;color:var(--text-muted);font-weight:500;}
 
-    /* Cards */
-    section{margin:140px 0;}
-    .section-title{
-      font-size:2.6rem;font-weight:900;text-align:center;
-      margin-bottom:80px;color:var(--text);
+    /* FIRST CARD — HIGH-CONTRAST HERO CARD */
+    .highlight-card{
+      background:var(--highlight-card);
+      color:white !important;
+      padding:64px 40px;
+      text-align:center;
+      border-radius:32px;
+      box-shadow:0 30px 80px rgba(13,92,99,0.4);
     }
-    .cards{
-      display:grid;gap:40px;max-width:1000px;margin:0 auto;
-    }
-    .card{
-      background:white;padding:48px;border-radius:28px;
-      box-shadow:0 25px 60px rgba(0,0,0,0.08);
-      transition:var(--transition);border:1px solid var(--border);
-    }
+    .highlight-card h2{color:#facc15 !important;font-size:3.2rem;margin-bottom:20px;}
+    .highlight-card .counter{background:linear-gradient(45deg,#facc15,#ffd700);-webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent;}
+    .highlight-card p{color:#e0f2fe;font-size:1.5rem;margin-top:24px;}
+
+    section{margin:160px 0;}
+    .section-title{font-size:2.8rem;font-weight:900;text-align:center;margin-bottom:90px;color:var(--text);}
+    .cards{display:grid;gap:44px;max-width:1000px;margin:0 auto;}
+    .card{background:white;padding:52px;border-radius:28px;box-shadow:0 25px 60px rgba(0,0,0,0.08);transition:var(--transition);border:1px solid var(--border);}
     .card:hover{transform:translateY(-12px);box-shadow:0 40px 90px rgba(0,0,0,0.14);}
-    .card h3{
-      font-size:1.9rem;font-weight:800;color:var(--accent);margin-bottom:20px;
-    }
-    .card p{
-      font-size:1.18rem;color:var(--text-muted);line-height:1.75;
-      margin-bottom:24px;
-    }
-    .list{
-      list-style:none;padding:0;
-    }
-    .list li{
-      padding:16px 0;display:flex;gap:20px;align-items:flex-start;
-      border-bottom:1px solid rgba(0,0,0,0.06);
-    }
+    .card h3{font-size:2rem;font-weight:800;color:var(--accent);margin-bottom:24px;}
+    .card p{font-size:1.2rem;color:var(--text-muted);line-height:1.75;margin-bottom:28px;}
+    .list{list-style:none;padding:0;}
+    .list li{padding:18px 0;display:flex;gap:24px;align-items:flex-start;border-bottom:1px solid rgba(0,0,0,0.06);}
     .list li:last-child{border:none;}
-    .list li::before{
-      content:"✓";font-size:2rem;font-weight:bold;
-      color:var(--gold-light);flex-shrink:0;margin-top:4px;
-    }
+    .list li::before{content:"Checkmark";font-size:2.2rem;font-weight:bold;color:var(--gold-light);flex-shrink:0;margin-top:4px;}
 
-    /* Final CTA */
-    .final-cta{
-      background:linear-gradient(135deg,#0d5c63,#1e293b);
-      color:white;padding:120px 40px;border-radius:40px;
-      text-align:center;margin:160px auto 0;max-width:1000px;
-      box-shadow:0 40px 100px rgba(0,0,0,0.3);
-    }
-    .final-cta h2{
-      font-size:3.6rem;font-weight:900;margin-bottom:32px;
-      background:linear-gradient(90deg,#facc15,#ffd700);
-      -webkit-background-clip:text;background-clip:text;
-      -webkit-text-fill-color:transparent;
-    }
-    .final-cta p{
-      font-size:1.7rem;max-width:720px;margin:0 auto 48px;opacity:0.95;line-height:1.7;
-    }
+    .final-cta{background:linear-gradient(135deg,#0d5c63,#1e293b);color:white;padding:140px 40px;border-radius:40px;text-align:center;margin:180px auto 0;max-width:1000px;box-shadow:0 40px 100px rgba(0,0,0,0.3);}
+    .final-cta h2{font-size:3.9rem;font-weight:900;margin-bottom:36px;background:linear-gradient(90deg,#facc15,#ffd700);-webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent;}
+    .final-cta p{font-size:1.8rem;max-width:720px;margin:0 auto 56px;opacity:0.95;line-height:1.7;}
 
-    /* Footer */
-    footer{
-      padding:80px 20px 40px;text-align:center;color:var(--text-muted);
-      font-size:1rem;
-    }
+    footer{padding:100px 20px 50px;text-align:center;color:var(--text-muted);font-size:1rem;}
     footer a{color:var(--accent);text-decoration:none;font-weight:600;}
     footer a:hover{color:var(--gold-light);}
 
-    /* Mobile first perfection */
     @media (max-width:640px){
-      .hero{padding:120px 0 100px;}
-      .stats{grid-template-columns:1fr;gap:24px;}
-      section{margin:100px 0;}
-      .section-title{font-size:2.3rem;margin-bottom:60px;}
-      .card{padding:40px 28px;}
-      .final-cta{padding:90px 28px;}
-      .final-cta h2{font-size:3rem;}
+      .hero{padding:130px 0 110px;}
+      .stats{grid-template-columns:1fr;gap:28px;}
+      section{margin:120px 0;}
+      .section-title{font-size:2.4rem;margin-bottom:70px;}
+      .card{padding:44px 32px;}
+      .highlight-card{padding:56px 32px;}
+      .final-cta{padding:100px 32px;}
+      .final-cta h2{font-size:3.2rem;}
     }
   </style>
 </head>
@@ -189,7 +101,7 @@
   </header>
 
   <section class="hero">
-    <div class="badge">Founding Alliance</div>
+    <div class="badge">The Founding Teacher Alliance</div>
     <h1>African teachers leading<br>the AI revolution</h1>
     <p class="lead">
       A teacher-led, mobile-first movement — built by African teachers, for African teachers. 
@@ -218,101 +130,7 @@
     </div>
   </section>
 
-  <section>
-    <h2 class="section-title">The problem</h2>
-    <div class="cards">
-      <div class="card">
-        <h3>AI tools are entering classrooms faster than teachers are prepared</h3>
-        <p>
-          If teachers are not first in the design room, decades of indigenous wisdom risk being lost. 
-          TichaAfrica ensures teachers lead the transition.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <section>
-    <h2 class="section-title">The solution — led by teachers</h2>
-    <div class="cards">
-      <div class="card">
-        <ul class="list">
-          <li>Teacher-led design. Every module starts with teacher insight.</li>
-          <li>Mobile-first delivery. Simple, low-bandwidth learning for every phone.</li>
-          <li>Free core training. Open access to foundational resources.</li>
-          <li>Policy-aligned. Mapped to UNESCO AI CFT and AU Continental AI Strategy.</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <section>
-    <h2 class="section-title">What founding teachers gain</h2>
-    <div class="cards">
-      <div class="card">
-        <ul class="list">
-          <li>Shape the continent’s first teacher co-created AI curriculum</li>
-          <li>Earn a Founding Teacher digital badge and certificate</li>
-          <li>Early access to tools, templates and micro-courses</li>
-          <li>Be part of research and policy conversations with partners</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <section class="final-cta">
-    <h2>Join the founding alliance</h2>
-    <p>
-      We invite the first 10,000 teachers to co-create the curriculum and define how AI is used in African classrooms.
-    </p>
-    <div class="cta-group" style="margin-top:40px;">
-      <a href="YOUR_ALLIANCE_FORM_LINK" class="btn btn-primary" style="font-size:1.8rem;padding:28px 80px;background:#facc15;color:#1e293b;">
-        Yes — claim my spot
-      </a>
-    </div>
-  </section>
-
-</div>
-
-<footer>
-  <p>© 2025 TichaAfrica • <strong style="color:#ca8a04;">Teach Smart, Lead Change</strong></p>
-  <p style="margin-top:12px;">
-    <a href="mailto:contact@tichaafrica.com">contact@tichaafrica.com</a> • 
-    <a href="#">WhatsApp</a> • <a href="#">Instagram</a> • <a href="#">X</a> • <a href="#">LinkedIn</a>
-  </p>
-</footer>
-
-<script>
-  // Lightweight counter animation
-  const counter = document.getElementById('counter');
-  let count = 0;
-  const target = 1247;
-  const increment = Math.ceil(target / 80);
-  const timer = setInterval(() => {
-    count += increment;
-    if (count >= target) {
-      counter.textContent = target.toLocaleString();
-      clearInterval(timer);
-    } else {
-      counter.textContent = count.toLocaleString();
-    }
-  }, 40);
-
-  // Subtle scroll animations
-  const observer = new IntersectionObserver((entries) => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        entry.target.style.opacity = '1';
-        entry.target.style.transform = 'translateY(0)';
-      }
-    });
-  }, { threshold: 0.1 });
-
-  document.querySelectorAll('section > *:not(.final-cta)').forEach(el => {
-    el.style.opacity = '0';
-    el.style.transform = 'translateY(40px)';
-    el.style.transition = 'all 1s cubic-bezier(0.16,1,0.3,1)';
-    observer.observe(el);
-  });
-</script>
-</body>
-</html>
+  <!-- FIRST CARD — HIGH-CONTRAST HERO CARD -->
+  <section class="highlight-card">
+    <h2>The Founding Teacher Alliance</h2>
+    <div class="counter" style="font-size:6.5rem;margin
