--- a/alliance-form.html
+++ b/alliance-form.html
@@ -3,238 +3,146 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Teacher Alliance Form — Ticha Africa</title>
+  <title>Join The Founding Teacher Alliance — TichaAfrica</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f8f9fa;
-      color: #003366;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      display: flex;
-      align-items: center;
-      padding: 15px 20px;
-      background: #ffffff;
-      border-bottom: 2px solid #2e9a4d;
-    }
-
-    header img {
-      height: 60px;
-    }
-
-    .hero {
-      position: relative;
-      text-align: center;
-      color: white;
-    }
-
-    .hero img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-
-    .hero-title {
-      text-align: center;
-      padding: 20px;
-      background: #003366;
-      color: #fff;
-    }
-
-    main {
-      padding: 20px;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-
-    .form-step { display: none; }
-    .form-step.active { display: block; }
-
-    .btn {
-      background: #2e9a4d;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      cursor: pointer;
-      margin-top: 10px;
-      border-radius: 5px;
-    }
-    .btn:hover { background: #24803d; }
-
-    /* Progress Bar */
-    .progress-container {
-      margin: 20px 0;
-    }
-
-    .progress-text {
-      font-weight: bold;
-      margin-bottom: 8px;
-      text-align: right;
-      color: #003366;
-    }
-
-    .progress-bar {
-      width: 100%;
-      height: 12px;
-      background: #ddd;
-      border-radius: 6px;
-      overflow: hidden;
-    }
-
-    .progress-fill {
-      height: 100%;
-      width: 0;
-      background: #2e9a4d;
-      transition: width 0.4s ease;
-    }
-
-    .form-invite {
-      margin-bottom: 20px;
-      font-size: 1.1rem;
-      font-style: italic;
-      color: #2e9a4d;
-      text-align: center;
-    }
+    *{margin:0;padding:0;box-sizing:border-box;}
+    body{font-family:'Inter',sans-serif;background:#0f0f23;color:#fff;display:flex;align-items:center;justify-content:center;min-height:100vh;padding:20px;background:radial-gradient(circle at top, #1e293b 0%, #0f0f23 70%);}
+    .form-container{max-width:480px;width:100%;background:rgba(255,255,255,0.08);backdrop-filter:blur(20px);border-radius:32px;padding:48px 32px;box-shadow:0 30px 80px rgba(0,0,0,0.6);border:1px solid rgba(255,215,0,0.3);position:relative;overflow:hidden;}
+    .progress{position:absolute;top:0;left:0;height:6px;background:#ffd700;transition:width .6s cubic-bezier(0.16,1,0.3,1);z-index:10;}
+    .step{opacity:0;transform:translateY(20px);transition:all .6s cubic-bezier(0.16,1,0.3,1);position:absolute;inset:0;padding:0 32px;display:flex;flex-direction:column;justify-content:center;}
+    .step.active{opacity:1;transform:translateY(0);position:relative;}
+    h1{font-size:2.4rem;font-weight:900;text-align:center;margin-bottom:16px;background:linear-gradient(135deg,#ffd700,#ff6b35);-webkit-background-clip:text;-webkit-text-fill-color:transparent;}
+    p{text-align:center;color:#e2e8f0;font-size:1.1rem;line-height:1.6;margin-bottom:32px;}
+    label{display:block;margin-bottom:24px;}
+    input, select, textarea{width:100%;padding:18px 20px;border-radius:20px;border:none;background:rgba(255,255,255,0.15);color:#fff;font-size:1.1rem;transition:all .3s;}
+    input::placeholder, textarea::placeholder{color:#94a3b8;}
+    input:focus, select:focus, textarea:focus{outline:none;background:rgba(255,255,255,0.25);box-shadow:0 0 0 4px rgba(255,215,0,0.3);}
+    .btn-next{display:block;width:100%;padding:18px;background:#ffd700;color:#0f0f23;font-weight:700;font-size:1.2rem;border-radius:999px;border:none;margin-top:32px;cursor:pointer;transition:all .4s;box-shadow:0 12px 30px rgba(255,215,0,0.4);}
+    .btn-next:hover{transform:translateY(-4px);box-shadow:0 20px 50px rgba(255,215,0,0.5);}
+    .btn-next:disabled{background:#64748b;cursor:not-allowed;transform:none;box-shadow:none;}
+    .logo{margin-bottom:32px;text-align:center;}
+    .logo img{height:72px;filter:drop-shadow(0 4px 12px rgba(0,0,0,0.4));}
+    .thankyou{text-align:center;padding:60px 20px;}
+    .thankyou h2{font-size:2.8rem;margin-bottom:24px;}
+    .thankyou p{font-size:1.3rem;color:#e2e8f0;line-height:1.7;}
   </style>
 </head>
 <body>
 
-  <!-- Header -->
-  <header>
-    <img src="images/logo1.png" alt="TichaAfrica Logo">
-  </header>
+<div class="form-container">
+  <div class="progress" id="progress"></div>
+  <div class="logo"><img src="images/logo1.png" alt="TichaAfrica"></div>
 
-  <!-- Hero Section -->
-  <div class="hero">
-    <img src="images/Alliance_hero.png" alt="Founding Teacher Alliance">
-  </div>
-  <div class="hero-title">
-    <h1>Join the Founding Teacher Alliance</h1>
-    <p>Help shape Africa’s first teacher-led AI curriculum.</p>
+  <!-- Step 1 -->
+  <div class="step active" data-step="1">
+    <h1>Welcome, Teacher!</h1>
+    <p>You’re one of the first 10,000 joining The Founding Teacher Alliance. Ready?</p>
+    <button class="btn-next" onclick="nextStep()">Yes — Let’s begin</button>
   </div>
 
-  <!-- Main Content -->
-  <main>
-    <p class="form-invite">
-      This is more than a form. It’s your voice in Africa’s future of learning.  
-      Share your story below — it will take less than 3 minutes.
-    </p>
+  <!-- Step 2 -->
+  <div class="step" data-step="2">
+    <h1>Your name</h1>
+    <p>How should we address you?</p>
+    <input type="text" id="name" placeholder="e.g. Aisha Mohammed" required>
+    <button class="btn-next" onclick="nextStep()">Continue →</button>
+  </div>
 
-    <!-- Progress Bar -->
-    <div class="progress-container">
-      <div class="progress-text" id="progress-text">Step 1 of 5</div>
-      <div class="progress-bar">
-        <div class="progress-fill" id="progress-fill"></div>
-      </div>
+  <!-- Step 3 -->
+  <div class="step" data-step="3">
+    <h1>Where do you teach?</h1>
+    <p>Country + city (or region)</p>
+    <input type="text" id="location" placeholder="e.g. Lagos, Nigeria" required>
+    <button class="btn-next" onclick="nextStep()">Continue →</button>
+  </div>
+
+  <!-- Step 4 -->
+  <div class="step" data-step="4">
+    <h1>What do you teach?</h1>
+    <p>Subject(s) or grade level</p>
+    <input type="text" id="subject" placeholder="e.g. Mathematics, Primary 4–6" required>
+    <button class="btn-next" onclick="nextStep()">Continue →</button>
+  </div>
+
+  <!-- Step 5 -->
+  <div class="step" data-step="5">
+    <h1>One sentence:</h1>
+    <p>What’s the biggest challenge you face using technology in your classroom today?</p>
+    <textarea id="challenge" rows="4" placeholder="Type your honest answer…" required></textarea>
+    <button class="btn-next" onclick="nextStep()">Continue →</button>
+  </div>
+
+  <!-- Step 6 -->
+  <div class="step" data-step="6">
+    <h1>Your contact</h1>
+    <p>Phone number (WhatsApp preferred) or email</p>
+    <input type="text" id="contact" placeholder="+234…" required>
+    <button class="btn-next" onclick="nextStep()">Continue →</button>
+  </div>
+
+  <!-- Final Step -->
+  <div class="step" data-step="7">
+    <div class="thankyou">
+      <h2>You’re in! 🎉</h2>
+      <p>Welcome to <strong>The Founding Teacher Alliance</strong>.<br>Your voice will shape the future of AI in African education.</p>
+      <p style="margin-top:32px;font-size:1.1rem;">You’ll receive a welcome message on WhatsApp within 24 hours.<br>Check your spam if using email.</p>
+      <div style="margin-top:48px;font-size:2.5rem;">Teach Smart, Lead Change ✨</div>
     </div>
+  </div>
+</div>
 
-    <form name="teacher-alliance" method="POST" data-netlify="true" onsubmit="showThankYou(event)">
-      <input type="hidden" name="form-name" value="teacher-alliance">
+<script>
+  const steps = document.querySelectorAll('.step');
+  const progress = document.getElementById('progress');
+  let current = 0;
 
-      <!-- Step 1 -->
-      <div class="form-step active">
-        <label>Let’s start with your name. What should we call you?</label><br>
-        <input type="text" name="name" required>
-        <button type="button" class="btn next">Next</button>
-      </div>
+  function nextStep() {
+    if (current < steps.length - 1) {
+      // Validate required fields
+      const activeInput = steps[current].querySelector('input, textarea');
+      if (activeInput && activeInput.hasAttribute('required') && !activeInput.value.trim()) {
+        activeInput.style.border = '2px solid #ff6b35';
+        activeInput.focus();
+        return;
+      }
 
-      <!-- Step 2 -->
-      <div class="form-step">
-        <label>Which country are you teaching in? We’re building this together, across Africa.</label><br>
-        <input type="text" name="country" required>
-        <button type="button" class="btn prev">Back</button>
-        <button type="button" class="btn next">Next</button>
-      </div>
+      steps[current].classList.remove('active');
+      current++;
+      steps[current].classList.add('active');
 
-      <!-- Step 3 -->
-      <div class="form-step">
-        <label>Every context matters. Do you teach in a rural or urban school?</label><br>
-        <select name="context" required>
-          <option value="">Select</option>
-          <option>Rural</option>
-          <option>Urban</option>
-        </select>
-        <button type="button" class="btn prev">Back</button>
-        <button type="button" class="btn next">Next</button>
-      </div>
+      // Update progress bar
+      progress.style.width = (current / (steps.length - 1)) * 100 + '%';
 
-      <!-- Step 4 -->
-      <div class="form-step">
-        <label>What is the biggest challenge in your classroom right now?</label><br>
-        <textarea name="challenge" required></textarea>
-        <button type="button" class="btn prev">Back</button>
-        <button type="button" class="btn next">Next</button>
-      </div>
+      // Auto-focus next input
+      const nextInput = steps[current].querySelector('input, textarea');
+      if (nextInput) setTimeout(() => nextInput.focus(), 400);
 
-      <!-- Step 5 -->
-      <div class="form-step">
-        <label>What innovation, habit, or strategy has worked well for you that others can learn from?</label><br>
-        <textarea name="innovation" required></textarea>
-        <button type="button" class="btn prev">Back</button>
-        <button type="submit" class="btn">Submit</button>
-      </div>
-    </form>
+      // Final step — submit data (replace with your actual endpoint)
+      if (current === steps.length - 1) {
+        const data = {
+          name: document.getElementById('name').value,
+          location: document.getElementById('location').value,
+          subject: document.getElementById('subject').value,
+          challenge: document.getElementById('challenge').value,
+          contact: document.getElementById('contact').value,
+          timestamp: new Date().toISOString()
+        };
 
-    <!-- Thank You Screen -->
-    <div class="thank-you" id="thank-you" style="display:none; text-align:center; padding:40px;">
-      <h2>🎉 Thank You!</h2>
-      <p>Your voice will help shape the future of AI in African classrooms.</p>
-      <p>You’ll now be redirected to <a href="https://tichaafrica.substack.com/" target="_blank">Beyond the Blackboard Newsletter</a> in 5 seconds.</p>
-    </div>
-  </main>
-
-  <script>
-    const steps = document.querySelectorAll(".form-step");
-    const progressText = document.getElementById("progress-text");
-    const progressFill = document.getElementById("progress-fill");
-    const totalSteps = steps.length;
-    let currentStep = 0;
-
-    function showStep(step) {
-      steps.forEach((s, i) => s.classList.toggle("active", i === step));
-      updateProgress(step);
+        // Example: send to Google Sheets, Tally, or your backend
+        console.log('Alliance member:', data);
+        // fetch('YOUR_WEBHOOK_URL', {method:'POST',body:JSON.stringify(data),headers:{'Content-Type':'application/json'}});
+      }
     }
+  }
 
-    function updateProgress(step) {
-      progressText.textContent = `Step ${step + 1} of ${totalSteps}`;
-      const progressPercent = ((step + 1) / totalSteps) * 100;
-      progressFill.style.width = progressPercent + "%";
-    }
-
-    document.querySelectorAll(".next").forEach(btn => {
-      btn.addEventListener("click", () => {
-        if (currentStep < steps.length - 1) {
-          currentStep++;
-          showStep(currentStep);
-        }
-      });
-    });
-
-    document.querySelectorAll(".prev").forEach(btn => {
-      btn.addEventListener("click", () => {
-        if (currentStep > 0) {
-          currentStep--;
-          showStep(currentStep);
-        }
-      });
-    });
-
-    function showThankYou(e) {
+  // Allow Enter key to proceed
+  document.addEventListener('keydown', e => {
+    if (e.key === 'Enter' && document.activeElement.tagName === 'INPUT' || document.activeElement.tagName === 'TEXTAREA') {
       e.preventDefault();
-      document.querySelector("form").style.display = "none";
-      document.getElementById("thank-you").style.display = "block";
-      setTimeout(() => {
-        window.location.href = "https://tichaafrica.substack.com/";
-      }, 5000);
+      nextStep();
     }
-
-    // Initialize progress bar
-    showStep(currentStep);
-  </script>
-
+  });
+</script>
 </body>
 </html>
