--- a/alliance-form.html
+++ b/alliance-form.html
@@ -7,20 +7,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
   <style>
     *{margin:0;padding:0;box-sizing:border-box;}
-    body{font-family:'Inter',sans-serif;background:#0f0f23;color:#fff;display:flex;align-items:center;justify-content:center;min-height:100vh;padding:20px;background:radial-gradient(circle at top, #1e293b 0%, #0f0f23 70%);}
+    body{font-family:'Inter',sans-serif;background:#0f0f23;color:#fff;display:flex;align-items:center;justify-content:center;min-height:100vh;padding:20px;background:radial-gradient(circle at top,#1e293b 0%,#0f0f23 70%);}
     .form-container{max-width:480px;width:100%;background:rgba(255,255,255,0.08);backdrop-filter:blur(20px);border-radius:32px;padding:48px 32px;box-shadow:0 30px 80px rgba(0,0,0,0.6);border:1px solid rgba(255,215,0,0.3);position:relative;overflow:hidden;}
     .progress{position:absolute;top:0;left:0;height:6px;background:#ffd700;transition:width .6s cubic-bezier(0.16,1,0.3,1);z-index:10;}
     .step{opacity:0;transform:translateY(20px);transition:all .6s cubic-bezier(0.16,1,0.3,1);position:absolute;inset:0;padding:0 32px;display:flex;flex-direction:column;justify-content:center;}
     .step.active{opacity:1;transform:translateY(0);position:relative;}
     h1{font-size:2.6rem;font-weight:900;text-align:center;margin-bottom:16px;background:linear-gradient(135deg,#ffd700,#ff6b35);-webkit-background-clip:text;-webkit-text-fill-color:transparent;}
     p{text-align:center;color:#e2e8f0;font-size:1.1rem;line-height:1.6;margin-bottom:32px;}
-    label{display:block;margin-bottom:24px;}
-    input, select, textarea{width:100%;padding:18px 20px;border-radius:20px;border:none;background:rgba(255,255,255,0.15);color:#fff;font-size:1.1rem;transition:all .3s;}
-    input::placeholder, textarea::placeholder{color:#94a3b8;}
-    input:focus, select:focus, textarea:focus{outline:none;background:rgba(255,255,255,0.25);box-shadow:0 0 0 4px rgba(255,215,0,0.3);}
+    input,textarea{width:100%;padding:18px 20px;border-radius:20px;border:none;background:rgba(255,255,255,0.15);color:#fff;font-size:1.1rem;transition:all .3s;}
+    input::placeholder,textarea::placeholder{color:#94a3b8;}
+    input:focus,textarea:focus{outline:none;background:rgba(255,255,255,0.25);box-shadow:0 0 0 4px rgba(255,215,0,0.3);}
     .btn-next{display:block;width:100%;padding:18px;background:#ffd700;color:#0f0f23;font-weight:700;font-size:1.2rem;border-radius:999px;border:none;margin-top:32px;cursor:pointer;transition:all .4s;box-shadow:0 12px 30px rgba(255,215,0,0.4);}
     .btn-next:hover{transform:translateY(-4px);box-shadow:0 20px 50px rgba(255,215,0,0.5);}
-    .btn-next:disabled{background:#64748b;cursor:not-allowed;transform:none;box-shadow:none;}
     .logo{margin-bottom:32px;text-align:center;}
     .logo img{height:72px;filter:drop-shadow(0 4px 12px rgba(0,0,0,0.4));}
     .thankyou{text-align:center;padding:60px 20px;}
@@ -34,14 +32,14 @@
   <div class="progress" id="progress"></div>
   <div class="logo"><img src="../images/logo1.png" alt="TichaAfrica"></div>
 
-  <!-- Step 1 -->
+  <!-- Step 1 — THIS WAS THE ONLY BUG (missing "()") -->
   <div class="step active" data-step="1">
     <h1>Welcome, Teacher!</h1>
     <p>You’re one of the first 10,000 joining The Founding Teacher Alliance. Ready?</p>
     <button class="btn-next" onclick="nextStep()">Yes — Let’s begin</button>
   </div>
 
-  <!-- Step 2 -->
+  <!-- All other steps (unchanged) -->
   <div class="step" data-step="2">
     <h1>Your name</h1>
     <p>How should we address you?</p>
@@ -49,7 +47,6 @@
     <button class="btn-next" onclick="nextStep()">Continue →</button>
   </div>
 
-  <!-- Step 3 -->
   <div class="step" data-step="3">
     <h1>Where do you teach?</h1>
     <p>Country + city (or region)</p>
@@ -57,7 +54,6 @@
     <button class="btn-next" onclick="nextStep()">Continue →</button>
   </div>
 
-  <!-- Step 4 -->
   <div class="step" data-step="4">
     <h1>What do you teach?</h1>
     <p>Subject(s) or grade level</p>
@@ -65,7 +61,6 @@
     <button class="btn-next" onclick="nextStep()">Continue →</button>
   </div>
 
-  <!-- Step 5 -->
   <div class="step" data-step="5">
     <h1>One sentence:</h1>
     <p>What’s the biggest challenge you face using technology in your classroom today?</p>
@@ -73,7 +68,6 @@
     <button class="btn-next" onclick="nextStep()">Continue →</button>
   </div>
 
-  <!-- Step 6 -->
   <div class="step" data-step="6">
     <h1>Your contact</h1>
     <p>Phone number (WhatsApp preferred) or email</p>
@@ -81,12 +75,11 @@
     <button class="btn-next" onclick="nextStep()">Finish →</button>
   </div>
 
-  <!-- Final Step — Thank You -->
   <div class="step" data-step="7">
     <div class="thankyou">
       <h2>You’re in! 🎉</h2>
       <p>Welcome to <strong>The Founding Teacher Alliance</strong>.<br>Your voice will shape the future of AI in African education.</p>
-      <p style="margin-top:32px;font-size:1.1rem;">You’ll receive a welcome message on WhatsApp within 24 hours.<br>Check your spam if using email.</p>
+      <p style="margin-top:32px;font-size:1.1rem;">You’ll receive a welcome message on WhatsApp within 24 hours.</p>
       <div style="margin-top:48px;font-size:2.5rem;">Teach Smart, Lead Change ✨</div>
     </div>
   </div>
@@ -101,24 +94,24 @@
     const currentStep = steps[current];
     const input = currentStep.querySelector('input, textarea');
 
-    // Validate
+    // Simple validation
     if (input && input.hasAttribute('required') && !input.value.trim()) {
       input.style.border = '2px solid #ff6b35';
       input.focus();
       return;
     }
 
-    // Move forward
+    // Move to next step
     currentStep.classList.remove('active');
     current++;
     steps[current].classList.add('active');
 
-    // Update progress
+    // Update progress bar
     progress.style.width = (current / (steps.length - 1)) * 100 + '%';
 
     // Auto-focus next field
     const nextInput = steps[current].querySelector('input, textarea');
-    if (nextInput) setTimeout(() => nextInput.focus(), 500);
+    if (nextInput) setTimeout(() => nextInput.focus(), 400);
 
     // Final step — collect data
     if (current === steps.length - 1) {
@@ -131,12 +124,12 @@
         timestamp: new Date().toISOString()
       };
       console.log('New Founding Teacher:', data);
-      // Replace with your real endpoint (Tally, Google Sheets, etc.)
-      // fetch('YOUR_WEBHOOK_URL', {method:'POST',body:JSON.stringify(data),headers:{'Content-Type':'application/json'}});
+      // Replace with your real webhook / form endpoint
+      // fetch('YOUR_WEBHOOK_URL', {method:'POST',body:JSON.stringify(data)});
     }
   }
 
-  // Allow Enter key to proceed
+  // Enter key support
   document.addEventListener('keydown', e => {
     if (e.key === 'Enter' && !e.shiftKey) {
       e.preventDefault();
